# embedded-storage-inmemory

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: lib.rs
